[package]
name = "makhzan-container"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
makhzan-support = { workspace = true }
anymap2 = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
inventory = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }

[features]
default = ["async"]
async = ["tokio", "async-trait"]