[package]
name = "makhzan"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
makhzan-container = { workspace = true }
makhzan-derive = { workspace = true }
makhzan-support = { workspace = true }

[features]
default = ["async"]
async = ["makhzan-container/async"]